Fix alignment issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,6 +48,14 @@ h3 {
   margin-bottom: 1rem;
 }
 
+.top-right-corner {
+  margin-top: 1rem;
+}
+
+.bottom-right-corner {
+  margin-bottom: 1rem;
+}
+
 body {
 }
 
